user-workload-monitoring/01-deploy-webapp.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: shonpaz123/webapp-exporter:webapp 
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
        - name: exporter
          image: shonpaz123/webapp-exporter:exporter
          imagePullPolicy: Always
          ports:
            - containerPort: 9877
              name: http
