user-workload-monitoring/02-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp-exporter
spec:
  ports:
  - name: metrics
    port: 9877
    protocol: TCP
    targetPort: 9877
  selector:
    app: webapp
